[package]
name = "iter-enum"
version = "1.1.0"
edition = "2018"
rust-version = "1.56"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/taiki-e/iter-enum"
keywords = ["iterator", "derive", "enum"]
categories = ["no-std", "rust-patterns"]
exclude = ["/.*", "/tools", "/DEVELOPMENT.md"]
description = """
#[derive(Iterator, DoubleEndedIterator, ExactSizeIterator, Extend)] for enums.
"""

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[workspace]

[lib]
proc-macro = true

[features]
# Enable to use `#[derive(ParallelIterator, IndexedParallelIterator, ParallelExtend)]`.
rayon = []

# Note: rayon is public dependency.
[dependencies]
derive_utils = "0.13.1"
quote = "1"
syn = "2"

[dev-dependencies]
macrotest = "1.0.9"
rayon_crate = { package = "rayon", version = "1" }
rustversion = "1"
